test/compile_errors/err_typeinfo_fields_non_struct.w
//! expect-check-fail: type.fields() requires a struct type

const BAD = comptime TypeInfo.fields[i32]()

fn main:
    let _ = BAD
